[project]
name = "11"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "omegaconf>=2.3.0",
    "ortools>=9.11.4210",
    "pandas>=3.0.1",
    "pulp>=2.8.0",
    "seaborn>=0.13.2",
    "scipy>=1.17.0",
]
